# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPLv2

  22 Jul 2007; Roy Marples <uberlord@gentoo.org>:

    Harden gendepends.sh some more so we only capture the stdout we want from
    the depend function, #186072.

  21 Jul 2007; Roy Marples <uberlord@gentoo.org>:

    RC_DEPEND_STRICT now controls dependency strictness.
    If yes then we only use services in the boot and default runlevels,
    regradless of service state.
    If no then we take into account coldplugged services and the state
    of currently running services.
    Fixes #185640.

  15 Jul 2007; Roy Marples <uberlord@gentoo.org>:

    adsl module now finds the correct exe, #185276 thanks to Marcello Laganà.

  14 Jul 2007; Mike Frysinger <vapier@gentoo.org>:

    Add --remove-destination to example /dev recover command #40987.

* baselayout-2.0.0_alpha4 (12 Jul 2007)

  11 Jul 2007; Roy Marples <uberlord@gentoo.org>:

    Don't unmount network filesystems in localmount or halt.sh, #175602.
    Don't do interactive when changing init, #174141.

  10 Jul 2007; Roy Marples <uberlord@gentoo.org>:

    init scripts and their extra options can now have descriptions, #184327.
    We no longer care about numerical runlevels, #184733.

  09 Jul 2007; Roy Marples <uberlord@gentoo.org>:

    Add an option to fork ldconfig in env-update, #182794

  06 Jul 2007; Roy Marples <uberlord@gentoo.org>:

    Add and delete IPv6 addresses and routes correctly on FreeBSD, #184430
    thanks to Friedrich Oslage.
    
  02 Jul 2007; Roy Marples <uberlord@gentoo.org>:

    Don't wait for services that were inactive, #183667 thanks to Daniel Drake

  30 Jun 2007; Roy Marples <uberlord@gentoo.org>:

    Don't set an early font if consolefont isn't in a runlevel, #183773.

  27 Jun 2007; Roy Marples <uberlord@gentoo.org>:

    Add --no-ldconfig option to env-update to match portage.

  26 Jun 2007; Roy Marples <uberlord@gentoo.org>:
